@@ -26,7 +26,6 @@
 #ifdef ENABLE_KDE_SUPPORT
 #include <KDE/KCmdLineArgs>
 #include <KDE/KStartupInfo>
-#include <KDE/KMessageBox>
 #include <KDE/Solid/PowerManagement>
 #include "initialsettingswizard.h"
 #else
@@ -88,16 +87,6 @@ int Application::newInstance() {
                 Settings::self()->saveConnectionDetails(wz.getDetails());
                 Settings::self()->save(true);
             }
-        }
-        if (0==Utils::getGroupId() && KMessageBox::Cancel==KMessageBox::warningContinueCancel(0,
-                i18n("You are not currently a member of the \"users\" group. "
-                        "Cantata will function better (saving of album covers, lyrics, etc. with the correct permissions) if you "
-                        "(or your administrator) add yourself to this group.\n\n"
-                        "Note, that if you do add yourself you will need to logout and back in for this to take effect.\n\n"
-                        "Select \"Continue\" to start Cantata as is."),
-                QString(), KStandardGuiItem::cont(), KStandardGuiItem::cancel(), "groupWarning")) {
-            QApplication::exit(0);
-            return 0;
         }
         w=new MainWindow();
         connect(w, SIGNAL(destroyed(QObject *)), this, SLOT(mwDestroyed(QObject *)));
